# humatheque-vlm-bench

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  FIRST-SESSION.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/humatheque_vlm_bench/: __init__.py  cli.py
src/ocr_bench/: __init__.py  backends.py  cli.py  dataset.py  elo.py  env.py  judge.py  publish.py  run.py  space.py  standard_eval.py  task_config.py  validate.py  viewer.py  web.py
src/ocr_bench/scripts/: vlm_metadata_extraction.py
src/ocr_bench/static/: style.css
src/ocr_bench/templates/: comparison_card.html  leaderboard.html
tests/: test_cli.py  test_dataset.py  test_judge.py  test_publish.py  test_run.py  test_standard_eval.py  test_task_config.py  test_validate.py  test_web.py
