[project]
name = "ocr-bench"
version = "0.0.2"
description = "OCR model evaluation toolkit — VLM-as-judge with per-dataset leaderboards"
readme = "README.md"
authors = [
    { name = "Daniel van Strien", email = "davanstrien@gmail.com" }
]
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "datasets>=4.0.0",
    "huggingface-hub",
    "numpy",
    "openai",
    "pillow",
    "rich",
    "scipy",
    "stamina",
    "structlog",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/davanstrien/ocr-bench"
Repository = "https://github.com/davanstrien/ocr-bench"
Demo = "https://huggingface.co/spaces/davanstrien/ocr-bench-britannica-results-qwen35-viewer"

[project.scripts]
ocr-bench = "ocr_bench.cli:main"

[project.optional-dependencies]
viewer = ["fastapi>=0.115", "uvicorn[standard]>=0.32", "jinja2>=3.1", "python-multipart>=0.0.9"]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.11",
    "ty>=0.0.17",
]
